--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "cli": "^1.0.1",
-    "eslint": "8.43.0",
+  "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
+    "next": "^15.2.2",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "styled-components": "^6.0.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
