--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,11 @@
       }
     ],
     "paths": {
-      "~/*": ["./components/*"],
-      "@styles/*": ["./styles/*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@styles/*": ["./src/styles/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
