--- a/package.json
+++ b/package.json
@@ -12,26 +12,28 @@
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.26.0",
+    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
     "cli": "^1.0.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "next": "^15.2.2",
-    "postcss": "8.4.24",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.0.2",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.5.3",
     "sass": "^1.85.1",
-    "supabase": "^1.75.3"
+    "supabase": "^1.75.3",
+    "tailwindcss": "^4.0.14"
   }
 }
